[package]
name = "update_cell"
version = "0.1.0"
authors = ["Niklas Sombert <niklas@ytvwld.de>"]
description = "A Cell<Option<T>> that you can update"
categories = ["rust-patterns", "no-std"]
keywords = ["cell", "generic", "update"]
readme = "README.md"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/YtvwlD/update_cell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
version-sync = "0.9"
